<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_editar"
        android:title="@string/ediar"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_nuevo"
        android:title="@string/nuevo"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_eliminar"
        android:title="@string/eliminar"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_configuracion"
        android:title="@string/configuracion"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never"
        />
</menu>